[tool.poetry]
name = "repl_python3_TestBot1Replit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"
flask = "^2.0.1"
youtube-dl = "^2021.6.6"
python-dotenv = "^0.17.1"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
